--- a/COSIDRAM Mens shoose.html
+++ b/COSIDRAM Mens shoose.html
@@ -90,69 +90,74 @@
     <div id="produts">
         <div id="" class="puma_jackets">
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/81bVOSbjnLL._AC_UL320_.jpg">
-                <h2>Bed Skirt 14 Inch Drop (Queen, Charcoal)</h2>
-                <p>Price:	$17.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgSs_dhYWfBXvfEk9p4Gfwn4-PAXdWT05Lhw&s">
+                <h2>Shose Cosdrame</h2>
+                <p>₹ 1,999 15% OFF</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/71vzeQg57hL._AC_UL320_.jpg">
-                <h2>Wrap Around Dust Ruffle Bed Skirt </h2>
-                <p>Price:	$26.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSf1WVu4sb08L8cAPonmY91JU7e2UtAd_low&s">
+                <h2>Cosidrame shose For Men's</h2>
+                <p>Rs.3,199.00</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/71jTGDxZfoL._AC_UL320_.jpg">
-                <h2>Bamboo Bay 4 Piece King Size Sheets Set - 100%</h2>
-                <p>Price:$97.73</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZrB7z52gtbAYDBR64vp3flPTYgL9vVuk4WA&s">
+                <h2>Cosidrame Shoes for a man</h2>
+                <p>₹2,500</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/81g4St3owGL._AC_UL320_.jpg">
-                <h2>Chezmoi Collection 6-Piece Black Sheet</h2>
-                <p>Price:	$19.99 ($3.33 / Count)</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_JdKCOf7NJzAXt4kJsOb5kydqSD-pfVoXLA&s">
+                <h2>Black Slim Fit Full Cosidrame Shoose</h2>
+                <p>₹3,699</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/71mJ+8AEMNL._AC_UL320_.jpg">
-                <h2>Box Spring Cover King Size </h2>
-                <p>Price:	$16.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPAWZJDuyEY-4qFFtURVnI4qvZek7YZJjGpA&s">
+                <h2>Fancy casual shose</h2>
+                <p>₹2,025 ₹2,699 -25% OFF</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXM7zMgbvJunjmoW8X5Vxd9SyRXehX31M1sA&s">
-                <h2>Bed simple.</h2>
-                <p>150$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq0aFujZsZ5uP48CV6GSG__NfhZANroGUOoQ&s">
+                <h2>Men  Sleeve Diamond Shoose</h2>
+                <p> Rs. 1890.00 Rs. 1,999.00</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHGF7URJohYbxwXnI4nKQ4pKGEBnOz7bVtGw&s">
-                <h2>Bed..</h2>
-                <p>1500$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToCGCT9fyuGn7hLa8v-IE31KGBLuYjXqhXVw&s">
+                <h2>Men White Slim Fit Solid Full Sleeves Casual Shoose</h2>
+                <p> Mrp
+                    ₹ 1,100.00₹ 1,199.0040% OFF</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn3QMRWhh8senO0tVDJR-Ec7M2UjXSVSv_Gw&s">
-                <h2>Best Baby bed..</h2>
-                <p>1500$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiQsBi82nd3BTwRm9pk3-kje5Ofz9KSCBCng&s">
+                <h2>Best Cosidrame Shoose</h2>
+                <p> ₹ 1,000.00 ₹999.00 20%OFF</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMYtk0GaF9wg79G93bDAlLZIbTuP5NHTcPKw&s">
-                <h2>MALM bed</h2>
-                <p>120$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4YblJ_823SFVQL8ftUwXFQgs1yJbXvEcTFQ&s">
+                <h2>Cosidrame Loafer slipe shoose</h2>
+                <p> ₹4,102
+                    MRP₹13,678
+                    (70% OFF)</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtbXZ5Wdm0LEjNPFVibwiC3nIB9qG7f2xwRA&s">
-                <h2>Beds and frams</h2>
-                <p>150$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReeKuzU9cRlD4svnb0yfnKF_nZHB9hL_ba2g&s">
+                <h2>Loafer Cosidrame shoose</h2>
+                <p> $49.99 $52.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRW9jyNaD6i4tGt24YyO8AKs8PWKtzgBjsHA&s">
-                <h2>Double Beds..</h2>
-                <p>1500$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkF1FnPbAONvlLkrW36s7nfhQWIx3tMR1Opg&s">
+                <h2>Cosidrame shoose</h2>
+                <p>₹1,025.00</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAXoRxCTWcZbB5nCUOw-UblCmUqjk4emn16Q&s">
-                <h2>1300 Beds Stock</h2>
-                <p>By start 80$</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyU1Oq3T93Mn2ZjMYHqFlFozXub-6OWVb2Pw&s">
+                <h2>Men cosidram Shoose</h2>
+                <p> Sale priceRs. 1,592
+                    Regular priceRs. 1,990
+                    20% OFF</p>
             </div>
         </div>
     </div>
-     <!-- tere are part off ending_homes -->
-     <div id="ending_flexity" class="ending_flexity">
+    <!-- tere are part off ending_homes -->
+    <div id="ending_flexity" class="ending_flexity">
         <a href="/index.html">
             <div class="Home_icone">
                 <i class="fa-solid fa-house"></i>
@@ -176,7 +181,6 @@
             <p>Cart</p>
         </div>
     </div>
-
 </body>
 
 </html>
