--- a/DIYJTS LED shoose.html
+++ b/DIYJTS LED shoose.html
@@ -90,69 +90,69 @@
     <div id="produts">
         <div id="" class="puma_jackets">
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/81bVOSbjnLL._AC_UL320_.jpg">
-                <h2>Bed Skirt 14 Inch Drop (Queen, Charcoal)</h2>
-                <p>Price:	$17.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN_CTZx26LSCnD7kJLSezgDR7N9vbmHMyeFQ&s">
+                <h2>DIY JTS Unisex</h2>
+                <p>Price: $17.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/71vzeQg57hL._AC_UL320_.jpg">
-                <h2>Wrap Around Dust Ruffle Bed Skirt </h2>
-                <p>Price:	$26.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzVU8uFg6Pw1fMfgJNr-FwARhW5q87n0WdKA&s">
+                <h2>USB Rechargeable </h2>
+                <p>Price: $26.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/71jTGDxZfoL._AC_UL320_.jpg">
-                <h2>Bamboo Bay 4 Piece King Size Sheets Set - 100%</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0hLxHh5-C7AXAyHwftbWiogtJq_ERQblyjA&s">
+                <h2>DIY JTS Unisex LED</h2>
                 <p>Price:$97.73</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/81g4St3owGL._AC_UL320_.jpg">
-                <h2>Chezmoi Collection 6-Piece Black Sheet</h2>
-                <p>Price:	$19.99 ($3.33 / Count)</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9exATkjBhsG_kjMV7FPtP0G3pFtqmF6DGJg&s">
+                <h2>Buy DIY JTS</h2>
+                <p>Price: $19.99 ($3.33 / Count)</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://m.media-amazon.com/images/I/71mJ+8AEMNL._AC_UL320_.jpg">
-                <h2>Box Spring Cover King Size </h2>
-                <p>Price:	$16.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzt9Iw3u-FttK-6c5IaU4oPzZHbRtkLwpvOQ&s">
+                <h2>Mr. shoose LED</h2>
+                <p>Price: $16.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXM7zMgbvJunjmoW8X5Vxd9SyRXehX31M1sA&s">
-                <h2>Bed simple.</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8gT9Xj31IQWzissipIqKwQ6IPgaVbaxpylQ&s">
+                <h2>LED Snackers LED</h2>
                 <p>150$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHGF7URJohYbxwXnI4nKQ4pKGEBnOz7bVtGw&s">
-                <h2>Bed..</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5GzaLTui8wCEcF9-h2hfFGhjEpBOiryx8Dg&s">
+                <h2>Light Up shoose Hight shoose.</h2>
                 <p>1500$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn3QMRWhh8senO0tVDJR-Ec7M2UjXSVSv_Gw&s">
-                <h2>Best Baby bed..</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_glWhNIjzUcanLyJhSrob8uK2zPmvrQ_KTg&s">
+                <h2>Reachargable Snackers</h2>
                 <p>1500$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMYtk0GaF9wg79G93bDAlLZIbTuP5NHTcPKw&s">
-                <h2>MALM bed</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPx49gjNXfF0Nc2Sz_dxhPbGrlEhC5eI6t3Q&s">
+                <h2>Faction devicion men</h2>
                 <p>120$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtbXZ5Wdm0LEjNPFVibwiC3nIB9qG7f2xwRA&s">
-                <h2>Beds and frams</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR57ULtgFdtjB6fhSAvb_1TJDs_B07gG-WUxQ&s">
+                <h2>Hight Top quality</h2>
                 <p>150$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRW9jyNaD6i4tGt24YyO8AKs8PWKtzgBjsHA&s">
-                <h2>Double Beds..</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHbFu3bEzMbAf6ec9QWQ836ee_Oe7RuOO1Rw&s">
+                <h2>Luminouse shoose..</h2>
                 <p>1500$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAXoRxCTWcZbB5nCUOw-UblCmUqjk4emn16Q&s">
-                <h2>1300 Beds Stock</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiR5uDzzpebI3LeTBMtkSWX6zdxvsTh8-rWQ&s">
+                <h2>Golden Shoose sale</h2>
                 <p>By start 80$</p>
-            </div>
+            </div>gi
         </div>
     </div>
-     <!-- tere are part off ending_homes -->
-     <div id="ending_flexity" class="ending_flexity">
+    <!-- tere are part off ending_homes -->
+    <div id="ending_flexity" class="ending_flexity">
         <a href="/index.html">
             <div class="Home_icone">
                 <i class="fa-solid fa-house"></i>
@@ -176,7 +176,6 @@
             <p>Cart</p>
         </div>
     </div>
-
 </body>
 
 </html>
