--- a/puma man.html
+++ b/puma man.html
@@ -105,7 +105,7 @@
                 <p>₹2,500</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuMqC86sUBplXPqeWW1lvkDHRT5gOgWrb3HA&s">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK-jLDFhhcdckGwpunUlXeDcippWzNLSmrTg&s">
                 <h2>Black Slim Fit Full Sleeves Formal Shoose</h2>
                 <p>₹3,699</p>
             </div>
@@ -138,18 +138,18 @@
                     (70% OFF)</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-MPZuyI3wWUvPCxD2D1iJsQPgdpxycmx0GA&s">
-                <h2>ASOS DESIGN brushed volume oversized shacket in black with cord</h2>
-                <p> $49.99$49.99</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwh7mmnA5Cay8zr7iJhBSRiTAimrpe-ygY7A&s">
+                <h2>ASOS DESIGN brushed shoose</h2>
+                <p> $49.99 $52.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrgOIG4EK-DYcnYbbo2H0_dsMXI9neuH3A7w&s">
-                <h2>Men's Stretch Poly Shirt</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOamxmMZcztHpewAAfoBxnJIusZZAapuqJRQ&s">
+                <h2>Men's Stretch Poly Shoose</h2>
                 <p>₹1,025.00</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj_IfkTP_uLAHD7cW9FVkndjKNARuNRHsUcQ&s">
-                <h2>Men Olive Solid Collar Full Sleeve Winter T-Shirt</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTukvgsqSURhmJSO_gOfrr_siON9w-k1vco8A&s">
+                <h2>Men Sleeve Winter Shoose</h2>
                 <p> Sale priceRs. 1,592
                     Regular priceRs. 1,990
                     20% OFF</p>
