--- a/XE Soft.html
+++ b/XE Soft.html
@@ -90,63 +90,63 @@
     <div id="produts">
         <div id="" class="puma_jackets">
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQN_CTZx26LSCnD7kJLSezgDR7N9vbmHMyeFQ&s">
-                <h2>DIY JTS Unisex</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSi-pDK4MERK3n7dHw4DdDN165HxqOoOGIAQ&s">
+                <h2>XE Looks soft</h2>
                 <p>Price: $17.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzVU8uFg6Pw1fMfgJNr-FwARhW5q87n0WdKA&s">
-                <h2>USB Rechargeable </h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTREhAIg3Aji5qMlQeZyKV9P05dRz1Xqo27qA&s">
+                <h2>Flet Soft, Comfert..</h2>
                 <p>Price: $26.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0hLxHh5-C7AXAyHwftbWiogtJq_ERQblyjA&s">
-                <h2>DIY JTS Unisex LED</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSf5kWG_Db5342vJ1_XJeXleP3Jb0Wqlq4fGQ&s">
+                <h2>XE Looks Soft</h2>
                 <p>Price:$97.73</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9exATkjBhsG_kjMV7FPtP0G3pFtqmF6DGJg&s">
-                <h2>Buy DIY JTS</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN52CedQ5jyZ6rLaEyBD3SPTp8MlTVGsDDZw&s">
+                <h2>XE Looks Women</h2>
                 <p>Price: $19.99 ($3.33 / Count)</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzt9Iw3u-FttK-6c5IaU4oPzZHbRtkLwpvOQ&s">
-                <h2>Mr. shoose LED</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTNp_Tk8ezB9evEPiKgqMYFRVyh1uwbOEhIg&s">
+                <h2>XE Shoose</h2>
                 <p>Price: $16.99</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8gT9Xj31IQWzissipIqKwQ6IPgaVbaxpylQ&s">
-                <h2>LED Snackers LED</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBtDA9HDY_h-CBUek_YPbMoCEOXG5ROMcyrQ&s">
+                <h2>Xe style shoose</h2>
                 <p>150$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5GzaLTui8wCEcF9-h2hfFGhjEpBOiryx8Dg&s">
-                <h2>Light Up shoose Hight shoose.</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfby27LsbJ3hpXHHj3sfTynESI-L_hS3JMew&s">
+                <h2>By XE Looks</h2>
                 <p>1500$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_glWhNIjzUcanLyJhSrob8uK2zPmvrQ_KTg&s">
-                <h2>Reachargable Snackers</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiAFu7RTOPohMVoV6ayFZ0Cy-dhih8nWha9Q&s">
+                <h2>By XE Looks White</h2>
                 <p>1500$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPx49gjNXfF0Nc2Sz_dxhPbGrlEhC5eI6t3Q&s">
-                <h2>Faction devicion men</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZFI7oisip9lA-lP4D44JN-sRnRodWU3QMwg&s">
+                <h2>Ladies XE lookes</h2>
                 <p>120$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR57ULtgFdtjB6fhSAvb_1TJDs_B07gG-WUxQ&s">
-                <h2>Hight Top quality</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAnH_1NRJjMH6ZHYM6JOBz58jR3CpcPcwiMg&s">
+                <h2>Doctor Extra Soft</h2>
                 <p>150$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHbFu3bEzMbAf6ec9QWQ836ee_Oe7RuOO1Rw&s">
-                <h2>Luminouse shoose..</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8ps9apa5AN8lq81ths9G1w5Wz4Rynaa9WfA&a">
+                <h2>Xe looks Footware</h2>
                 <p>1500$</p>
             </div>
             <div id="imgs_jackets" class="imgs_jackets">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiR5uDzzpebI3LeTBMtkSWX6zdxvsTh8-rWQ&s">
-                <h2>Golden Shoose sale</h2>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYFM69W8rcxmBE3mizRVMKKiP0157zQTiEyA&s">
+                <h2>Beige Casual</h2>
                 <p>By start 80$</p>
             </div>
         </div>
