--- a/index.html
+++ b/index.html
@@ -561,17 +561,20 @@
                         </div>
                     </a>
                     <a href="/DIYJTS LED shoose.html" style="text-decoration: none; color: black;">
-                    <div id="number_1" class="number_1">
-                        <img src="https://m.media-amazon.com/images/I/71u4ku2v+jL._AC_UL320_.jpg">
-                        <p>DIYJTS Unisex LED Light Up Shoes, Fashion High Top LED</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
-                </a>
-                    <div id="number_1" class="number_1">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-2_EekLJLXgdn6jeb-ZaQ9Ra7wp6woIY0Nw&s">
-                        <p>By lookes XE Soft</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
+                        <div id="number_1" class="number_1">
+                            <img src="https://m.media-amazon.com/images/I/71u4ku2v+jL._AC_UL320_.jpg">
+                            <p>DIYJTS Unisex LED Light Up Shoes, Fashion High Top LED</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
+                    <a href="/XE Soft.html" style="text-decoration: none; color: black;">
+                        <div id="number_1" class="number_1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-2_EekLJLXgdn6jeb-ZaQ9Ra7wp6woIY0Nw&s">
+                            <p>By lookes XE Soft</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
                 </div>
                 <div id="box_two" class="three_box">
                     <div class="number_1">
@@ -616,18 +619,22 @@
                     <h1>Best Deals On Appliances</h1>
                 </div>
                 <div id="produts_lists" class="produts_lists">
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQBYOdiA0kc_aO5hYfZjgDXIoIi56VXtQxOQ&s">
-                        <p>CC-TV: Camra..</p>
-                        <p>50-80% off</p>
-                    </div>
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVpIeRnEpllB-cpjkscfiGpzGoJtfjuKTalQ&s">
-                        <p>Pen Drive.</p>
-                        <p>50% off</p>
-                    </div>
+                    <a href="/CC-tv.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQBYOdiA0kc_aO5hYfZjgDXIoIi56VXtQxOQ&s">
+                            <p>CC-TV: Camra..</p>
+                            <p>50-80% off</p>
+                        </div>
+                    </a>
+                    <a href="/Pen Drive.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVpIeRnEpllB-cpjkscfiGpzGoJtfjuKTalQ&s">
+                            <p>Pen Drive.</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
                     <div id="jackets" class="img1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU5UiUOjRa5whUE6t2y8FvKIHRJwqKILIvtg&s">
