--- a/index.html
+++ b/index.html
@@ -92,19 +92,25 @@
     <div class="color">
         <div class="Products">
             <div id="section1" class="section">
-                <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
-                    <p>Grocery</p>
-                </div>
-                <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/22fddf3c7da4c4f4.png?q=100">
-                    <p>Mobiles</p>
-                </div>
-                <div class="dress">
-                    <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJqRZHhQuUdtzgEftmkBI_wQWlInokheE45Q&s">
-                    <p>Fashion</p>
-                </div>
+                <a href="/Grocery.html" style="text-decoration: none; color: black;">
+                    <div class="dress">
+                        <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                        <p>Grocery</p>
+                    </div>
+                </a>
+                <a href="/iphon_products.html" style="text-decoration: none; color: black;">
+                    <div class="dress">
+                        <img src="https://rukminim2.flixcart.com/flap/64/64/image/22fddf3c7da4c4f4.png?q=100">
+                        <p>Mobiles</p>
+                    </div>
+                </a>
+                <a href="/faction.html" style="text-decoration: none; color: black;">
+                    <div class="dress">
+                        <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJqRZHhQuUdtzgEftmkBI_wQWlInokheE45Q&s">
+                        <p>Fashion</p>
+                    </div>
+                </a>
             </div>
             <div id="section2" class="section">
                 <div class="dress">
