--- a/index.html
+++ b/index.html
@@ -144,10 +144,8 @@
                     <p>Two Wheelers</p>
                 </div>
             </div>
-
         </div>
     </div>
-
     <!-- there are products listed display none -->
     <div class="mouse_carts">
         <div class="products_parts">
@@ -641,24 +639,30 @@
                             <p>50% off</p>
                         </div>
                     </a>
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU5UiUOjRa5whUE6t2y8FvKIHRJwqKILIvtg&s">
-                        <p>Keybord..</p>
-                        <p>50% off</p>
-                    </div>
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR5HiGaV-jCcK8jJtwnaWNFNpUoGA7XB-f5g&s">
-                        <p>Towels...</p>
-                        <p>50% off</p>
-                    </div>
+                    <a href="/Keybord.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU5UiUOjRa5whUE6t2y8FvKIHRJwqKILIvtg&s">
+                            <p>Keybord..</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
+                    <a href="/Towels.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR5HiGaV-jCcK8jJtwnaWNFNpUoGA7XB-f5g&s">
+                            <p>Towels...</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
+                    <a href="/Coolr.html" style="text-decoration: none; color: black;">
                     <div id="jackets" class="img1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWhC8xiHokzQvvbEoc7c1IlKQgCDwjC-f5oQ&s">
                         <p>Colers Moters...</p>
                         <p>50% off</p>
                     </div>
+                     </a>
                 </div>
             </div>
             <!-- there are parts of card dow 3  -->
